--- a/src/screens/DetailProduct/ImageProducts.css
+++ b/src/screens/DetailProduct/ImageProducts.css
@@ -1,7 +1,3 @@
-#app {
-    height: 100%;
-}
-
 html,
 body {
     position: relative;
@@ -17,7 +13,7 @@ body {
     padding: 0;
 }
 
-.swiper {
+.swiper-image-detail {
     width: 100%;
     height: 100%;
 }
@@ -36,6 +32,6 @@ body {
 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     object-fit: cover;
 }
